Add exclude no ROI option in 00_dataset_clustering

--- a/00_dataset_clustering.ipynb
+++ b/00_dataset_clustering.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
     "from tqdm import tqdm\n",
-    "import time"
+    "import time\n",
+    "import cv2\n",
+    "import numpy as np"
    ]
   },
   {
@@ -21,21 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "FileExistsError",
-     "evalue": "[WinError 183] 파일이 이미 있으므로 만들 수 없습니다: 'dataset\\\\T1W_brain_pic'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-075d8e17d788>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mMASK_PATH\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mr\"dataset\\Mask_brain_pic\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT1W_PATH\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT1W_PATH\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{T1W_PATH} already existed\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT1W_PATH\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT1W_PATH\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{T1W_PATH} already existed\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT1W_PATH\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT1W_PATH\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{T1W_PATH} already existed\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileExistsError\u001b[0m: [WinError 183] 파일이 이미 있으므로 만들 수 없습니다: 'dataset\\\\T1W_brain_pic'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "T1W_PATH = r\"dataset\\T1W_brain_pic\"\n",
     "T2F_PATH = r\"dataset\\T2F_brain_pic\"\n",
@@ -43,11 +33,27 @@
     "MASK_PATH = r\"dataset\\Mask_brain_pic\"\n",
     "\n",
     "os.mkdir(T1W_PATH) if not os.path.isdir(T1W_PATH) else print(\"{T1W_PATH} already existed\")\n",
-    "os.mkdir(T1W_PATH) if not os.path.isdir(T1W_PATH) else print(\"{T1W_PATH} already existed\")\n",
-    "os.mkdir(T1W_PATH) if not os.path.isdir(T1W_PATH) else print(\"{T1W_PATH} already existed\")\n",
-    "os.mkdir(T1W_PATH) if not os.path.isdir(T1W_PATH) else print(\"{T1W_PATH} already existed\")\n",
+    "os.mkdir(T2F_PATH) if not os.path.isdir(T2F_PATH) else print(\"{T2F_PATH} already existed\")\n",
+    "os.mkdir(T2W_PATH) if not os.path.isdir(T2W_PATH) else print(\"{T2W_PATH} already existed\")\n",
+    "os.mkdir(MASK_PATH) if not os.path.isdir(MASK_PATH) else print(\"{MASK_PATH} already existed\")\n",
     "\n",
-    "DATA_PATH = r\"dataset\\MRI_T1T2T2F_ROI\"\n"
+    "DATA_PATH = r\"dataset\\MRI_T1T2T2F_ROI\""
+   ]
+  },
+  {
+   "source": [
+    "# Options"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INCLUDE_EMPTY_MASK = False"
    ]
   },
   {
@@ -58,14 +64,31 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_img_empty(img):\n",
+    "    if np.any(img >= 1):\n",
+    "        return False\n",
+    "    return True"
+   ]
+  },
+  {
    "source": [
     "try:\n",
+    "\n",
+    "    count = 0\n",
+    "\n",
     "    for filename in tqdm(os.listdir(DATA_PATH), desc=\"copy file\", mininterval=0.02):\n",
+    "        \n",
     "        ## example. \"0046_20180613_100115_01_ROI.png\" to \"ROI\"\n",
     "        extention = os.path.splitext(filename)[0].split('_')[-1]    \n",
     "\n",
     "        srcDir = os.path.join(DATA_PATH,filename)\n",
     "        destDir = \"\"\n",
+    "\n",
     "        if extention == \"T1W\":\n",
     "            destDir = os.path.join(T1W_PATH,filename)\n",
     "        elif extention == \"T2F\":\n",
@@ -76,20 +99,75 @@
     "            destDir = os.path.join(MASK_PATH,filename)\n",
     "\n",
     "        shutil.copy(srcDir,destDir)\n",
+    "\n",
+    "    print(f\"total copyed image : {count}\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
    "cell_type": "code",
-   "metadata": {},
-   "execution_count": 24,
-   "outputs": []
+   "metadata": {
+    "tags": []
+   },
+   "execution_count": 64,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "copy file: 100%|██████████| 4336/4336 [00:03<00:00, 1274.84it/s]total copyed image : 0\n",
+      "\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 81,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "delete file with empty mask: 100%|██████████| 2748/2748 [00:00<00:00, 7507.76it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "if not INCLUDE_EMPTY_MASK:\n",
+    "\n",
+    "    delete_list = []\n",
+    "\n",
+    "    for img in os.listdir(MASK_PATH):\n",
+    "        if img.endswith('_ROI.png'):\n",
+    "            IMG_PATH = os.path.join(MASK_PATH,img)\n",
+    "            image = cv2.imread(IMG_PATH, cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "            if is_img_empty(np.array(image)):\n",
+    "                delete_list.append(img[:24] + \"ROI.png\")\n",
+    "                delete_list.append(img[:24] + \"T1W.png\")\n",
+    "                delete_list.append(img[:24] + \"T2F.png\")\n",
+    "                delete_list.append(img[:24] + \"T2W.png\")\n",
+    "\n",
+    "    for target in tqdm(delete_list, desc='delete file with empty mask'):\n",
+    "        \n",
+    "        target_path = ''\n",
+    "\n",
+    "        if target.endswith('_ROI.png'):\n",
+    "            target_path = os.path.join(MASK_PATH,target)\n",
+    "        elif target.endswith('_T1W.png'):\n",
+    "            target_path = os.path.join(T1W_PATH,target)\n",
+    "        elif target.endswith('_T2F.png'):\n",
+    "            target_path = os.path.join(T2F_PATH,target)\n",
+    "        elif target.endswith('_T2W.png'):\n",
+    "            target_path = os.path.join(T2W_PATH,target)\n",
+    "\n",
+    "        os.remove(target_path)"
+   ]
   },
   {
    "cell_type": "code",
@@ -102,8 +180,12 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "display_name": "Python 3.8.5 64-bit ('tensorflow2.0': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "646860e3ef292b05c4711bc0215df8d78f663c34f45abe9e800429298354d414"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -115,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5-final"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
