--- a/00_dataset_clustering.ipynb
+++ b/00_dataset_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{T1W_PATH} already existed\n{T2F_PATH} already existed\n{T2W_PATH} already existed\n{MASK_PATH} already existed\n"
+     ]
+    }
+   ],
    "source": [
     "T1W_PATH = r\"dataset\\T1W_brain_pic\"\n",
     "T2F_PATH = r\"dataset\\T2F_brain_pic\"\n",
     "T2W_PATH = r\"dataset\\T2W_brain_pic\"\n",
     "MASK_PATH = r\"dataset\\Mask_brain_pic\"\n",
+    "NUMPY_PATH = r\"dataset\\numpy\"\n",
     "\n",
     "os.mkdir(T1W_PATH) if not os.path.isdir(T1W_PATH) else print(\"{T1W_PATH} already existed\")\n",
     "os.mkdir(T2F_PATH) if not os.path.isdir(T2F_PATH) else print(\"{T2F_PATH} already existed\")\n",
     "os.mkdir(T2W_PATH) if not os.path.isdir(T2W_PATH) else print(\"{T2W_PATH} already existed\")\n",
     "os.mkdir(MASK_PATH) if not os.path.isdir(MASK_PATH) else print(\"{MASK_PATH} already existed\")\n",
+    "os.mkdir(NUMPY_PATH) if not os.path.isdir(NUMPY_PATH) else print(\"{NUMPY_PATH} already existed\")\n",
     "\n",
     "DATA_PATH = r\"dataset\\MRI_T1T2T2F_ROI\""
    ]
@@ -49,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +68,14 @@
   },
   {
    "source": [
-    "# Cluster Data"
+    "# Clustering Dataset"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +88,6 @@
   {
    "source": [
     "try:\n",
-    "\n",
-    "    count = 0\n",
-    "\n",
     "    for filename in tqdm(os.listdir(DATA_PATH), desc=\"copy file\", mininterval=0.02):\n",
     "        \n",
     "        ## example. \"0046_20180613_100115_01_ROI.png\" to \"ROI\"\n",
@@ -99,8 +106,6 @@
     "            destDir = os.path.join(MASK_PATH,filename)\n",
     "\n",
     "        shutil.copy(srcDir,destDir)\n",
-    "\n",
-    "    print(f\"total copyed image : {count}\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
@@ -108,21 +113,20 @@
    "metadata": {
     "tags": []
    },
-   "execution_count": 64,
+   "execution_count": 19,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "copy file: 100%|██████████| 4336/4336 [00:03<00:00, 1274.84it/s]total copyed image : 0\n",
-      "\n"
+      "copy file: 100%|██████████| 4336/4336 [00:06<00:00, 645.63it/s]\n"
      ]
     }
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -131,14 +135,11 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "delete file with empty mask: 100%|██████████| 2748/2748 [00:00<00:00, 7507.76it/s]\n"
+      "delete file with empty mask: 100%|██████████| 2756/2756 [00:01<00:00, 2645.48it/s]\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "pass\n",
-    "\n",
     "if not INCLUDE_EMPTY_MASK:\n",
     "\n",
     "    delete_list = []\n",
@@ -181,7 +182,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('tensorflow2.0': conda)",
+   "display_name": "Python 3.7.9 64-bit ('tensorflow2.0': conda)",
    "metadata": {
     "interpreter": {
      "hash": "646860e3ef292b05c4711bc0215df8d78f663c34f45abe9e800429298354d414"
@@ -198,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
