--- a/02_generate_labels.ipynb
+++ b/02_generate_labels.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.7.9"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,28 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def isEmptyImage(img):\n",
+    "def isMSLesionImage(img):\n",
     "    if np.any(img >= 1):\n",
     "        return 1\n",
-    "    \n",
+    "\n",
     "    return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "png to inumpy: 100%|██████████| 1084/1084 [00:00<00:00, 1819.51it/s]395 1084\n",
-      "\n"
+      "png to inumpy: 100%|██████████| 395/395 [00:00<00:00, 1106.23it/s]\n"
      ]
     }
    ],
@@ -74,7 +73,7 @@
     "    for img in tqdm(FILES, desc=\"png to inumpy\", mininterval=0.02):\n",
     "        img_path = os.path.join(MASK_PATH,img)\n",
     "        image = cv2.imread(img_path)\n",
-    "        labels.append(isEmptyImage(image))\n",
+    "        labels.append(isMSLesionImage(np.array(image)))\n",
     "except Exception as e:\n",
     "    print(e, img)\n",
     "\n",
@@ -84,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "395 689\n"
+      "0.0 1.0\n"
      ]
     }
    ],
