--- a/00_dataset_clustering.ipynb
+++ b/00_dataset_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{T1W_PATH} already existed\n{T2F_PATH} already existed\n{T2W_PATH} already existed\n{MASK_PATH} already existed\n"
-     ]
-    }
-   ],
    "source": [
     "T1W_PATH = r\"dataset\\T1W_brain_pic\"\n",
     "T2F_PATH = r\"dataset\\T2F_brain_pic\"\n",
@@ -48,7 +36,11 @@
     "os.mkdir(NUMPY_PATH) if not os.path.isdir(NUMPY_PATH) else print(\"{NUMPY_PATH} already existed\")\n",
     "\n",
     "DATA_PATH = r\"dataset\\MRI_T1T2T2F_ROI\""
-   ]
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 2,
+   "outputs": []
   },
   {
    "source": [
@@ -59,11 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "INCLUDE_EMPTY_MASK = False"
+    "INCLUDE_EMPTY_MASK = True"
    ]
   },
   {
@@ -75,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,32 +105,24 @@
    "metadata": {
     "tags": []
    },
-   "execution_count": 19,
+   "execution_count": 5,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "copy file: 100%|██████████| 4336/4336 [00:06<00:00, 645.63it/s]\n"
+      "copy file: 100%|██████████| 9424/9424 [00:17<00:00, 550.38it/s]\n"
      ]
     }
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "delete file with empty mask: 100%|██████████| 2756/2756 [00:01<00:00, 2645.48it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not INCLUDE_EMPTY_MASK:\n",
     "\n",
@@ -199,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.9-final"
   }
  },
  "nbformat": 4,
