update model parameter to dict type

--- a/03_unet_train.ipynb
+++ b/03_unet_train.ipynb
@@ -281,38 +281,76 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'X' is not defined",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-1-2c2cab3e9a29>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m     hist = unet.fit(\n\u001b[1;32m---> 39\u001b[1;33m                         \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m                         \u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m                         \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'X' is not defined"
+          ]
+        }
+      ],
       "source": [
-        "from model import baseModel, unet_v1, unet_v2, unet_v3\n",
+        "from model import baseModel, unet_v1, unet_v2, unet_v3, unet_v5\n",
         "from keras import optimizers\n",
         "from util import bce_dice_loss, historyToJson, historyToPng\n",
         "from keras.metrics import MeanIoU\n",
         "from keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau, History\n",
         "from keras.models import load_model\n",
         "import json\n",
-        "import numpy as np\n",
-        "from numpyEncoder import NumpyEncoder\n",
         "\n",
-        "model_lists = [baseModel,unet_v1,unet_v2,unet_v3]\n",
-        "model_names = ['base_256','v1','v2','v3']\n",
-        "model_input_shapes = [(256,256,1),(256,256,1),(256,256,1),(256,256,1)]\n",
+        "model_options = [\n",
+        "\t{\n",
+        "\t\t'model_name': 'v5_1.3',\n",
+        "\t\t'model' : unet_v5,\n",
+        "\t\t'multiplier' : 1.3,\n",
+        "\t\t'input_shape' : (256,256,1)\n",
+        "\t},\n",
+        "    {\n",
+        "\t\t'model_name': 'v5_1.5',\n",
+        "\t\t'model' : unet_v5,\n",
+        "\t\t'multiplier' : 1.5,\n",
+        "\t\t'input_shape' : (256,256,1)\n",
+        "\t},\n",
+        "    {\n",
+        "\t\t'model_name': 'v5_1.8',\n",
+        "\t\t'model' : unet_v5,\n",
+        "\t\t'multiplier' : 1.8,\n",
+        "\t\t'input_shape' : (256,256,1)\n",
+        "\t},\n",
+        "    {\n",
+        "\t\t'model_name': 'v5_2.0',\n",
+        "\t\t'model' : unet_v5,\n",
+        "\t\t'multiplier' : 2.0,\n",
+        "\t\t'input_shape' : (256,256,1)\n",
+        "\t}\n",
+        "]\n",
         "\n",
-        "for model_name, model_list, model_input_shape in zip(model_names,model_lists, model_input_shapes):\n",
+        "for model_option in model_options:\n",
         " \n",
+        "    model_name = model_option['model_name']\n",
+        "    multiplier = model_option['multiplier']\n",
+        "    model = model_option['model']\n",
+        "    input_shape = model_option['input_shape']\n",
+        "\n",
         "    CHECKPOINT_NAME = f'model_{model_name}_best_checkpoint.h5'\n",
         "    HISTORY_PATH = f'model_{model_name}_history.json'\n",
         "    HISTORY_PNG_PATH = f'model_{model_name}_history.png'\n",
         " \n",
-        "    unet = model_list(input_shape=model_input_shape)\n",
+        "    unet = model(input_shape=input_shape, multiplier=multiplier)\n",
         "\n",
         "    unet.compile(optimizer=optimizers.Adam(lr=1e-3), \n",
         "                loss=bce_dice_loss, metrics=['accuracy',MeanIoU(num_classes=2,name=\"mean_iou\")])\n",
         "\n",
         "    model_checkpoint  = ModelCheckpoint(CHECKPOINT_NAME, save_best_only=True, \n",
         "                                        monitor='val_loss', mode='min', verbose=1)\n",
-        "    early_stopping = EarlyStopping(monitor='val_loss', patience=5, mode='min' , baseline=None)\n",
+        "    early_stopping = EarlyStopping(monitor='val_loss', patience=7, mode='min' , baseline=None)\n",
         "    reduceLR = ReduceLROnPlateau(patience=4, verbose=2, monitor='val_loss',min_lr=1e-4, mode='min')\n",
         "\n",
         "    callback_list = [early_stopping, reduceLR, model_checkpoint]\n",
